2003-08-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/same-gnome.xml: Updated for 2.4, including screen-shots.

	* glass.png: Fixed corruption in the PNG stream. Mysteriously this
	actually reduced the size of the file by 10k.

2003-07-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* same-gnome.desktop.in: Update name to fit HIG (bug 116916).

2003-06-24  William Jon McCann  <mccann@jhu.edu>

	* same-gnome.c: #define gconf key names.  Convert to pixbufs so
	we are ready for tranparent background themes.
	(draw_ball): Fixed a nasty little off-by-one error that caused
	segfaults after converting to pixbufs.

2003-06-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* same-gnome.c (main): Space at end of string fixes for i18n
	people.

2003-06-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* same-gnome.c: More compile cleanups from Steve Chaplin.

2003-06-18  William Jon McCann  <mccann@jhu.edu>

	* same-gnome.c: Include string.h.

2003-06-17  William Jon McCann  <mccann@jhu.edu>

	* same-gnome.c: Fixed compiler warnings.

2003-06-16  William Jon McCann  <mccann@jhu.edu>

	* same-gnome.c (game_preferences_callback): Make current
	theme be selected in preferences dialog.

2003-06-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* same-gnome.c : Yet more i18n fixed (see bug #114875). 

2003-06-10  William Jon McCann  <mccann@jhu.edu>

	* same-gnome.c (fill_list): Fixed bug where themes list
	was not getting filled.
	(game_preferences_callback): Replaced frame with GamesFrame.

2003-06-09  William Jon McCann  <mccann@jhu.edu>

	* same-gnome.c: Removed separator from dialogs as in HIG.

2003-06-05  William Jon McCann  <mccann@jhu.edu>

	* Makefile.am (install-data-local): Only install schemas
	if they are requested.

2003-05-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Implement setgid modifications
	(see gnome-games/ChangeLog). Also undo the score directory
	changes. It breaks more than it fixes.
