@@ -29,7 +29,7 @@ gnotski         Y       e       Y       Y       Y       Y
 gtali           Y       Y       Y       Y       Y       Y
 iagno           Y       Y       Y       Y       Y       Y
 mahjongg        Y       Y       Y       Y       Y       Y
-same-gnome      Y       N       Y       Y       Y       Y
+same-gnome      Y       Y       Y       Y       Y       Y
 libgames-supportN       -       -       -       -       Y
 gdk-card-image  N       -       -       -       -       Y
 
