@@ -1,3 +1,9 @@
+2003-08-08  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* same-gnome.schemas.in:
+	* same-gnome.c: GConf return value checking. Also removed the
+	nstones GConf key since it should be calculated from the theme.
+
 2003-08-02  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* help/C/same-gnome.xml: Updated for 2.4, including screen-shots.
